<resources>
    <string name="app_name">F1 blog</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an account</string>
    <string name="regist">Register</string>
    <string name="e_mail">E-mail</string>
    <string name="password_again">Repeat your password</string>
    <string name="siker_lt_bejelentkezni_gratul_lok_gyi_vagy">Sikerült bejelentkezni, gratulálok, ügyi vagy</string>
    <string name="logout">Logout</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="valami">valami</string>
</resources>