<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#FFFFFF"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@color/red"
        android:scaleType="fitStart"
        android:paddingStart="13dp"
        android:src="@drawable/f1logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="19"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        tools:layout_editor_absoluteX="25dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="19"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:minHeight="48dp"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="19"
        android:backgroundTint="@color/red"
        android:onClick="login"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="20dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"/>

    <Button
        android:id="@+id/continueAsGuest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:backgroundTint="@color/red"
        android:ems="19"
        android:onClick="continueAsGuest"
        android:text="@string/continue_as_guest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"/>

    <Button
        android:id="@+id/logInWithGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/red"
        android:ems="19"
        android:onClick="logInWithGoogle"
        android:text="@string/log_in_with_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continueAsGuest"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-12dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"/>

    <Button
        android:id="@+id/registJumpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FFFFFF"
        android:ems="19"
        android:onClick="registJump"
        android:text="@string/create_an_account"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInWithGoogle"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>

















